# tracexpert

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  appicon.rc  application.qrc  buildinfo.h.in  main.cpp  tanalactionaborter.h  tanalactionmodel.cpp  tanalactionmodel.h  tanalactionrunner.cpp  tanaldevicecontainer.cpp  tanaldevicemodel.cpp  tanaldevicemodel.h  tanaldevicewidget.cpp  tanaldevicewidget.h  tanalstreamreceiver.cpp  tanalstreamreceiver.h  tanalstreamreceivermodel.cpp  tanalstreamreceivermodel.h  tanalstreamsender.cpp  tanalstreamsender.h  tanalstreamsendermodel.h  tcombobox.h  tcomponentmodel.cpp  tcomponentmodel.h  tconfigparamwidget.cpp  tconfigparamwidget.h  tdevicemodel.cpp  tdevicemodel.h  tdevicewizard.cpp  tdevicewizard.h  tdialog.cpp  tdialog.h  tdockmanager.cpp  tdockmanager.h  (+36 more)
ConfigParamMVE/: CMakeLists.txt  TConfigParam_changelog_12.4.2023.txt  main.cpp  tconfigparam.cpp  tconfigparam.h
ads/: CMakeLists.txt
cmake/: FindPandoc.cmake  FindPicoScopeSDK.cmake
common/: tanaldevice.h  tcommon.h  tconfigparam.h  tiodevice.h  tmessage.h  tmessagepart.h  tplugin.h  tprotocol.h  tscope.h
development_examples/: README.md
development_examples/serialport/: CMakeLists.txt  tserialport.h  tserialportdevice.cpp
docs/: CMakeLists.txt  README.md  aiapiconnect.md  analytical.md  build.md  ciphers.md  components-devices.md  cpa.md  docs.qhcp.in  docs.qhp.in  example-cpa.md  example-measurement.md  examples.md  file.md  gettingstarted.md  hdf.md  img.css  iodevices.md  newae.md  oscilloscopes.md  picoscope6000.md  predictions.md  protocols.md  rng.md  scenarios.md  serialport.md  smartcard.md  toc-from-readme.lua  ttest.md  ui-projects.md
graphs/: tgraph.h  (+3 more)
gui/: CMakeLists.txt  tanalactionaborter.cpp  tanaldevicecontainer.h  tanaldevicemodel.cpp  tanaldevicemodel.h  tanaldevicewidget.cpp  tanaldevicewidget.h  tanalstreamsendermodel.cpp  tcombobox.cpp  tcomponentcontainer.cpp  tcomponentcontainer.h  tcomponentmodel.cpp  tcomponentmodel.h  tconfigparamwidget.cpp  tconfigparamwidget.h  tdevicemodel.cpp  tdevicemodel.h  tdevicewizard.cpp  tdevicewizard.h  tdialog.cpp  tdialog.h  tdockmanager.cpp  tdockmanager.h  tfilenameedit.cpp  tfilenameedit.h  tiodevicecontainer.cpp  tiodevicecontainer.h  tiodevicemodel.cpp  tiodevicemodel.h  tiodevicereceiver.cpp  tiodevicewidget.cpp  tiodevicewidget.h  tmainwindow.cpp  tmainwindow.h  tmessageformmanager.cpp  tmessageformmanager.h  tmessageformwidget.cpp  tmessageformwidget.h  toscilloscopewidget.cpp  toscilloscopewidget.h  (+22 more)
gui/protocol/: tabstracttablemodel.h  tmessageeditor.cpp  tmessageeditor.h  tmessageparteditor.cpp  tmessageparteditor.h  tmessagepartsimplecontainer.h  tmessagesimplecontainer.h  tprotocolcontainer.cpp  tprotocolcontainer.h  tprotocoleditor.cpp  tprotocoleditor.h  tprotocolmodel.cpp  tprotocolmodel.h  tprotocoltableview.h  tprotocolwidget.cpp  tprotocolwidget.h
gui/scenario/: tscenario.h  tscenarioconnection.h  tscenariocontainer.cpp  tscenariocontainer.h  tscenarioeditorwidget.cpp  tscenarioeditorwidget.h  tscenarioexecutor.h  tscenariographicalconnection.cpp  tscenariographicalconnection.h  tscenariographicalitem.cpp  tscenariographicalitem.h  tscenariographicalitemport.cpp  tscenariographicalitemport.h  tscenarioitem.cpp  tscenarioitem.h  tscenariomodel.cpp  tscenariomodel.h  tscenarioscene.cpp  tscenariowidget.cpp  tscenariowidget.h
gui/scenario/graphical_items/: tscenariographicalconditionitem.h  tscenariographicalembeddedsubtitleitem.h  tscenariographicalflowenditem.h  tscenariographicalflowmergeitem.h  tscenariographicalflowstartitem.h
gui/scenario/scenario_items/: tscenarioconstantvalueitem.h  tscenarioiodeviceitem.h  tscenarioiodevicereaditem.h  tscenarioiodevicewriteitem.h  tscenariologitem.h  tscenarioloopitem.h  tscenarioprotocolencodeitem.h  tscenarioscopeitem.h
plugins/AIAPIConnectEngine/: AIAPIConnectEngine_global.h  CMakeLists.txt  taiapiconnectengine.cpp  taiapiconnectengine.h  taiapiconnectenginedevice.cpp  taiapiconnectenginedevice.h  taiapiconnectenginedeviceaction.cpp  taiapiconnectenginedeviceaction.h  taiapiconnectenginedeviceinputstream.cpp  taiapiconnectenginedeviceinputstream.h  taiapiconnectenginedeviceoutputstream.cpp  taiapiconnectenginedeviceoutputstream.h
plugins/analtestingplugin/: CMakeLists.txt  tanaltestingaction.h  tanaltestingdevice.cpp  tanaltestingdevice.h  tanaltestingoutputstream.cpp  tanaltestingplugin.cpp  tanaltestingplugin.h
plugins/cipher/: CMakeLists.txt  TCipherPlugin_global.h  taesengine.cpp  taesengine.h  tcipheraction.cpp  tcipheraction.h  tcipherinputstream.cpp  tcipherinputstream.h  tcipheroutputstream.cpp  tcipheroutputstream.h  tcipherplugin.cpp  tcipherplugin.h  tpresentengine.cpp  tpresentengine.h
plugins/cpa/: CMakeLists.txt  TCPAPlugin_global.h  tcpaaction.cpp  tcpaaction.h  tcpadevice.cpp  tcpadevice.h  tcpainputstream.cpp  tcpainputstream.h  tcpaoutputstream.cpp  tcpaoutputstream.h  tcpaplugin.cpp  tcpaplugin.h
plugins/dummyscope/: CMakeLists.txt  TDummyScopePlugin_global.h  tdummyscope.h  tdummyscopeplugin.cpp  tdummyscopeplugin.h
plugins/file/: CMakeLists.txt  TFile_global.h  tfile.cpp  tfile.h  tfiledevice.cpp  tfiledevice.h
plugins/ps6000/: CMakeLists.txt  TPS6000_global.h  tps6000.cpp  tps6000.h  tps6000scope.cpp  tps6000scope.h
plugins/ps6000a/: CMakeLists.txt  TPS6000a_global.h  tps6000a.cpp  tps6000a.h  tps6000ascope.cpp  tps6000ascope.h
plugins/random/: CMakeLists.txt  TRandom_global.h  trandom.cpp  trandom.h  trandomdevice.cpp  trandomdevice.h
plugins/serialport/: CMakeLists.txt  TSerialPort_global.h  tserialport.cpp  tserialport.h  tserialportdevice.cpp  tserialportdevice.h  tserialportdevice.h.bak
plugins/smartcard/: CMakeLists.txt  TSmartCard_global.h  tsmartcard.cpp  tsmartcard.h  tsmartcarddevice.cpp  tsmartcarddevice.h
plugins/ttest/: CMakeLists.txt  TTTestPlugin_global.h  tttestaction.cpp  tttestaction.h  tttestdevice.cpp  tttestdevice.h  tttestinputstream.cpp  tttestinputstream.h  tttestoutputstream.cpp  tttestoutputstream.h  tttestplugin.cpp  tttestplugin.h
(+306 files in other folders)
